--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -7,8 +7,7 @@
     <h2 class="items-sell-title">商品の情報を入力</h2>
     <%= form_with  model:@item,  url: items_path,local: true do |f| %>
 
-<%# 出品が出来るようになったら↓のコメントアウトを外す %>
-    <%# <%= render 'shared/error_messages', model: f.object %>
+    <%= render 'shared/error_messages', model: f.object %>
 
 
     <%# 商品画像 %>
