--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -17,6 +17,7 @@
         <span class="indispensable">必須</span>
       </div>
       <div class="click-upload">
+          <div id="previews"></div>
         <p>
           クリックしてファイルをアップロード
         </p>
